tdf#112931 always signal AllUserEventsProcessed

If the last user event triggers a nested event loop, there is
no event in the nested loop, but AllUserEventsProcessed will
not be signaled, resulting in a busy loop in the gtk backend.

So just always signal AllUserEventsProcessed, if it was not
yet signaled.

While at it catch and std::abort on uncaught exceptions and fix
the default to have been signaled, so we won't signal on an
empty list on first run.

Change-Id: I480da906d87d3b95ba30b4c18420d2e20ffb5b2e
Reviewed-on: https://gerrit.libreoffice.org/43282
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>